<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home1"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_crime"
        android:icon="@drawable/ic_report_black_24dp"
        android:title="@string/report_ongoing_crime">
    </item>

    <item
        android:id="@+id/nav_viewcriminals"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/tell" />

    <item
        android:id="@+id/nav_login"
        android:icon="@drawable/ic_account_box_black_24dp"
        android:title="@string/log_in" />

    <item
            android:id="@+id/nav_fdbkapp"
        android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/feedbackaboutapp" />

    <group>
        <item android:title="@string/communicate">
            <menu>
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/share" />
                <item
                    android:id="@+id/nav_aboutus"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/about_us" />
            </menu>
        </item>
    </group>

</menu>

