<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.himanshu.onlinecrimereporting.fragments.Login">

    <ScrollView
        android:id="@*id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">


            <EditText
                android:id="@+id/enterusername"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="100dp"
                android:background="@drawable/edittextroundedcorners"
                android:hint="@string/enter_username"
                android:inputType="text"
                android:paddingLeft="5sp"
                android:paddingRight="5sp"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/enterpasswd"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/edittextroundedcorners"
                android:hint="@string/passwordenter"
                android:inputType="textPassword"
                android:paddingLeft="5sp"
                android:paddingRight="5sp"
                android:selectAllOnFocus="false"
                android:textColor="#000000" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="40dp"
                android:background="@color/colorPrimary"
                android:text="@string/log_in_user"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:onClick="onClickButton"
                android:text="@string/not_registered_signup_here"
                android:textColor="#000000"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/signupusername"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="500dp"
                android:background="@drawable/edittextroundedcorners"
                android:hint="@string/enter_your_username"
                android:inputType="text"
                android:paddingLeft="5sp"
                android:paddingRight="5sp"
                android:textColor="#000000" />


            <EditText
                android:id="@+id/signupemail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/edittextroundedcorners"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="5sp"
                android:paddingRight="5sp"
                android:selectAllOnFocus="false"
                android:textColor="#000000" />


            <EditText
                android:id="@+id/signupepasswd"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/edittextroundedcorners"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:paddingLeft="5sp"
                android:paddingRight="5sp"
                android:selectAllOnFocus="false"
                android:textColor="#000000" />

            <Button
                android:id="@+id/buttonSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="80dp"
                android:background="@color/colorPrimary"
                android:text="@string/sign_up_now"
                android:textColor="#ffffff" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
